# cwl-wrapper

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Jenkinsfile  README.md  TODO  cwlwrapper.py  environment.yml  meta.yaml  onstage.yaml  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py  src.tar
.binder/: environment.yml
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: build-image.yaml  package.yaml
assets/: custom_main.cwl  d-burned-area.cwl  eoepca-vegetation-index-ref.cwl  eoepca-vegetation-index-ref_onstage.cwl  eoepca-vegetation-index-ref_onstage.yaml  ex.yaml  m-burned-area.cwl  m-vegetation.cwl  opt-calibration.cwl  scatter.yaml  stagein-test.cwl  vegetation.cwl  vegetation.wf.custom_maincwl.yaml  vegetation.wf.yaml  vegetation.wf_new_stagein.yaml  vegetation.yaml  vegetation_metrics.cwl  vegetation_params.yml
src/: test.d.yaml  test.m.yaml  test.yaml
src/cwl_wrapper/: app.py  arguments.py  blender.py  main.py  parser.py  rulez.py  workflow.py
src/cwl_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cwl_wrapper/assets/: maincwl.yaml  maincwlmetrics.yaml  rules.yaml  rulez.yaml  stagein.yaml  stageout.yaml
src/cwl_wrapper/cwl/: __init__.py  t2cwl.py
src/tests/: __init__.py  subworkflow_test.py  test_config.py  test_no_dir_output.py  test_optional_directory.py  test_subworkflow.py
src/tests/data/: custom_config.conf  default_config.conf  main.cwl  no_dir_output.cwl  rules.cwl  stagein.cwl  stageout.cwl  stageout_alt.cwl  test_config_custom_expected.cwl  test_dNBR_expected.cwl  test_help_expected.txt  test_no_dir_output_expected.cwl  test_no_dir_output_expected_gen.cwl  test_optional_directory.cwl  test_optional_directory_expected.cwl
tests/: in_url.cwl  t.cwl  tarr.cwl  test1.py
