[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwl-wrapper"
dynamic = ["version"]
description = "xxx"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "keyword_1",
    "keyword_2",
]

[project.scripts]
cwl-wrapper = "cwl_wrapper.app:main"

[tool.hatch.version]
path = "src/cwl_wrapper/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/tests",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.envs.default]
dependencies = [
    "click",
    "click-config-file",
    "jinja2",
    "pyyaml",
    "setuptools",
    "loguru"
]

[tool.hatch.envs.test]
skip-install = false

dependencies = [
    "nose2", 
    "click",
    "click-config-file",
    "jinja2",
    "pyyaml",
    "setuptools",
    "loguru"
]

[tool.hatch.envs.test.scripts]
test = "hatch run nose2"
testv = "hatch run nose2 --verbose"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]