[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwl-wrapper"
dynamic = ["version"]
description = "CWL wrapper to add stage-in and stage-out to a base app package"
readme = "README.md"
license = "Apache-2.0"
keywords = []

#To add other authors 
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.hatch.envs.prod]
path = "/app/envs/wrapper"

[project.scripts]
cwl-wrapper = "cwl_wrapper.app:main"

[tool.hatch.version]
path = "src/cwl_wrapper/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cwl_wrapper",
]

[tool.hatch.build.targets.sdist]
include = [
    "src",
]

[project.urls]
Documentation = "https://github.com/EOEPCA/cwl-wrapper#readme"
Issues = "https://github.com/EOEPCA/cwl-wrapper/issues"
Source = "https://github.com/EOEPCA/cwl-wrapper"

[tool.hatch.envs.default]
dependencies = [
    "click",
    "click-config-file",
    "jinja2",
    "pyyaml",
    "setuptools",
    "loguru"
]

[tool.hatch.envs.test]
skip-install = false
dependencies = [
    "nose2", 
    "coverage",
    "click",
    "click-config-file",
    "jinja2",
    "pyyaml",
    "setuptools",
    "loguru"
]

#[tool.hatch.envs.test.env-vars]
#RETRY_ATTEMPTS="0"

[tool.hatch.envs.test.scripts]
test = "hatch run nose2"
testv = "hatch run nose2 --verbose"
#cov = ["coverage run --source=src -m nose2", "coverage report"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]